--- a/src/components/CamperCard/CamperCard.module.css
+++ b/src/components/CamperCard/CamperCard.module.css
@@ -64,3 +64,26 @@
 .button:hover {
     background-color: #d03737;
 }
+
+.right {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+}
+
+.heart {
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 20px;
+    color: #ccc;
+    transition: color 0.3s ease;
+}
+
+.heart:hover {
+    color: #e44848;
+}
+
+.active {
+    color: #e44848;
+}
