--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@ html,
 body {
   margin: 0;
   padding: 0;
-  font-family: var(--font-family-base), serif;
+  font-family: var(--font-family-base);
   font-size: var(--font-size-base);
   line-height: var(--line-height-base);
   background-color: var(--color-bg);
@@ -35,11 +35,15 @@ body {
   box-sizing: border-box;
 }
 
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Inter', sans-serif !important;
+}
+
 .container {
   width: 100%;
   max-width: var(--container-width);
   padding-left: var(--container-padding);
   padding-right: var(--container-padding);
   margin-left: auto;
-  margin-right: auto;
+  margin-right: var(--container-right);
 }
