--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,6 +2,7 @@
     background-color: #f7f7f7;
     padding: 24px 0;
     border-bottom: 1px solid #dadde1;
+    width: 100%;
 }
 
 .headerContent {
